<resources>
    <string name="app_name">ExerciseTimer</string>
    <string name="defaultSecond">30</string>
    <string name="defaultRound">10</string>
    <string name="defaultRest">60</string>
    <string name="defaultSet">3</string>
    <string name="seconds">seconds</string>
    <string name="rounds">rounds</string>
    <string name="rest">rest</string>
    <string name="sets">sets</string>
    <string name="delete_item">DELETE</string>
</resources>
